[package]
name = "qbms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
sysinfo = "0.20.5"
cached = "0.26.2"
toml = "0.5.8"
serde = "1.0.130"
serde_json = "1.0"
regex = "1.5.4"

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]

[dependencies.figment]
version = "0.10"
features = ["toml", "env"]

[dependencies.util]
path = '../util'
